# task_master_tw

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.ps1  tw.toml
taskmaster/: ai.py  ical.py  main.py  parser.py  taskwarrior.py  tw.py  tw.toml
taskmaster/static/: index.html
