[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "taskmaster"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai    = ["openai>=1.0.0"]
ai        = ["anthropic>=0.40.0", "openai>=1.0.0"]

[project.scripts]
tw = "taskmaster.tw:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["taskmaster*"]

[tool.setuptools.package-data]
taskmaster = ["static/*", "tw.toml"]
